# versaflow

./: .gitignore  CLAUDE.md  DATA-MODEL.md  PLAN.md  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json
.agents/skills/code/: SKILL.md
.agents/skills/code/agents/: openai.yaml
.agents/skills/code/scripts/: next_issue.py
.claude/skills/code/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/explain/: SKILL.md
.claude/skills/issue/: SKILL.md
sidecar/: Cargo.toml
sidecar/migrations/: 0001_core.sql  0002_worktree_pr_comment.sql  0003_agents_outbox_sync.sql  0099_seed.sql
sidecar/src/: bootstrap.rs  db.rs  framing.rs  main.rs  migrations.rs
src/main/: frameCodec.ts  index.ts  sidecar.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/components/chat/: ChatView.tsx  MenuPill.tsx  PermissionRequest.tsx  Toolcall.tsx
src/renderer/src/components/common/: StatusDot.tsx
src/renderer/src/components/compare/: AgentDetail.tsx  CompareTabView.tsx  JudgePanel.tsx
src/renderer/src/components/diff/: DiffStream.tsx  DiffTabView.tsx  (+1 more)
src/renderer/src/context/: zen.ts
src/renderer/src/data/: agents.ts  chat.tsx  comments.tsx  files.ts  issues.ts  pr.tsx  status-meta.ts  ticker.tsx  workspaces.ts  worktrees.ts
src/renderer/src/icons/: index.tsx
src/renderer/src/store/: connect.ts  protocol.ts  store.ts
src/renderer/src/styles/: cockpit.css  global.css  tokens.css
src/renderer/src/types/: index.ts  preload.d.ts
src/renderer/src/utils/: files.ts
(+47 files in other folders)
