[package]
name = "vf-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vf-sidecar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
